src/test/ui/non-exhaustive/non-exhaustive-match.stderr
error[E0004]: non-exhaustive patterns: `A` not covered
  --> $DIR/non-exhaustive-match.rs:8:11
   |
LL | enum T { A, B }
   | ---------------
   | |        |
   | |        not covered
   | `T` defined here
...
LL |     match x { T::B => { } }
   |           ^ pattern `A` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `false` not covered
  --> $DIR/non-exhaustive-match.rs:9:11
   |
LL |     match true {
   |           ^^^^ pattern `false` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `Some(_)` not covered
  --> $DIR/non-exhaustive-match.rs:12:11
   |
LL |     match Some(10) {
   |           ^^^^^^^^ pattern `Some(_)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `(_, _, -2147483648i32..=3i32)` and `(_, _, 5i32..=2147483647i32)` not covered
  --> $DIR/non-exhaustive-match.rs:15:11
   |
LL |     match (2, 3, 4) {
   |           ^^^^^^^^^ patterns `(_, _, -2147483648i32..=3i32)` and `(_, _, 5i32..=2147483647i32)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `(A, A)` not covered
  --> $DIR/non-exhaustive-match.rs:19:11
   |
LL |     match (T::A, T::A) {
   |           ^^^^^^^^^^^^ pattern `(A, A)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `B` not covered
  --> $DIR/non-exhaustive-match.rs:23:11
   |
LL | enum T { A, B }
   | ---------------
   | |           |
   | |           not covered
   | `T` defined here
...
LL |     match T::A {
   |           ^^^^ pattern `B` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `[]` not covered
  --> $DIR/non-exhaustive-match.rs:34:11
   |
LL |     match *vec {
   |           ^^^^ pattern `[]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

warning: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-match.rs:48:10
   |
LL |         [0.1, 0.2, 0.3] => (),
   |          ^^^
   |
note: lint level defined here
  --> $DIR/non-exhaustive-match.rs:2:10
   |
LL | #![allow(illegal_floating_point_literal_pattern)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: #[warn(illegal_floating_point_literal_pattern)] is the minimum lint level
   = note: the lint level cannot be reduced to `allow`
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

warning: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-match.rs:48:15
   |
LL |         [0.1, 0.2, 0.3] => (),
   |               ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

warning: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-match.rs:48:20
   |
LL |         [0.1, 0.2, 0.3] => (),
   |                    ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

warning: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-match.rs:58:10
   |
LL |         [0.1, 0.2] => (),
   |          ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

warning: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-match.rs:58:15
   |
LL |         [0.1, 0.2] => (),
   |               ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

warning: floating-point types cannot be used in patterns
  --> $DIR/non-exhaustive-match.rs:65:10
   |
LL |         [0.1] => (),
   |          ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out
   = warning: it will become a hard error in a future release!
   = note: for more information, see issue #41620 <https://github.com/rust-lang/rust/issues/41620>

error[E0004]: non-exhaustive patterns: `[_, _, _, _]` not covered
  --> $DIR/non-exhaustive-match.rs:47:11
   |
LL |     match *vec {
   |           ^^^^ pattern `[_, _, _, _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0004`.
